// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaxonomyColumnConfiguration component should render column "common_name": common_name 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "hosts": hosts 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/11652"
  >
    11652
  </a>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "lineage": lineage 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/10239"
  >
    Viruses
  </a>
   &gt; 
  <a
    href="/taxonomy/2559587"
  >
    Riboviria
  </a>
   &gt; 
  <a
    href="/taxonomy/2732397"
  >
    Pararnavirae
  </a>
   &gt; 
  <a
    href="/taxonomy/2732409"
  >
    Artverviricota
  </a>
   &gt; 
  <a
    href="/taxonomy/2732514"
  >
    Revtraviricetes
  </a>
   &gt; 
  <a
    href="/taxonomy/2169561"
  >
    Ortervirales
  </a>
   &gt; 
  <a
    href="/taxonomy/11632"
  >
    Retroviridae
  </a>
   &gt; 
  <a
    href="/taxonomy/327045"
  >
    Orthoretrovirinae
  </a>
   &gt; 
  <a
    href="/taxonomy/11646"
  >
    Lentivirus
  </a>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "links": links 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        class="external-link"
        href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?lvl=0&amp;id=11652"
        rel="noopener"
        target="_blank"
      >
        www.ncbi.nlm.nih.gov
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "mnemonic": mnemonic 1`] = `
<DocumentFragment>
  9PLVG
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "other_names": other_names 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Primate immunodeficiency viruses
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "parent": parent 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/11646"
  >
    Lentivirus
  </a>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "rank": rank 1`] = `
<DocumentFragment>
  no rank
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "reviewed": reviewed 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "scientific_name": scientific_name 1`] = `
<DocumentFragment>
  Primate lentivirus group
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "statistics": statistics 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb?query=(taxonomy_id:11652)"
      >
        35,809 UniProtKB entries
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?facets=reviewed:false&query=(taxonomy_id:11652)"
      >
        35,809 unreviewed UniProtKB entries
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TaxonomyColumnConfiguration component should render column "strains": strains 1`] = `<DocumentFragment />`;

exports[`TaxonomyColumnConfiguration component should render column "synonyms": synonyms 1`] = `<DocumentFragment />`;
